# gleb_10_14_android

./: .gitignore  README
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/test/gleb_10_14_android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/jni/: JNISoundEnergyListener.cpp  JNISoundEnergyListener.hpp  JNIVorbisFileDecoder.cpp  JNIVorbisFileEncoder.cpp  jniplatform.hpp  platform.cpp
app/src/main/cpp/src/: VorbisFileDecoder.cpp  VorbisFileDecoder.hpp  VorbisFileEncoder.cpp  VorbisFileEncoder.hpp  native-lib.cpp  platform.hpp
app/src/main/java/test/gleb_10_14_android/: AudioPlayerTask.java  AudioRecorderTask.java  AudioTaskBase.java  AudioTaskEvents.java  GraphView.java  MainActivity.java  MainContract.java  MainModel.java  MainViewModel.java  MainViewRowsAdapter.java  SwipeController.java  SwipeControllerActions.java
app/src/main/java/test/gleb_10_14_android/cppiface/: NativeRef.java  PcmWriteAcceptor.java  SoundEnergyListener.java  VorbisFileDecoder.java  VorbisFileEncoder.java
app/src/main/java/test/gleb_10_14_android/utility/: RandomString.java
app/src/main/res/drawable/: record.xml  reload.xml  stop.xml
app/src/main/res/layout/: activity_main.xml  row_item.xml
app/src/main/res/menu/: main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/test/gleb_10_14_android/: ExampleUnitTest.java
artifacts/: app-debug.apk
gradle/wrapper/: gradle-wrapper.properties
